--- a/thesis/bitr/intro.tex
+++ b/thesis/bitr/intro.tex
@@ -37,7 +37,9 @@ The \emph{binary type reconstruction} problem is: Given a binary program without
 Type reconstruction has received increased attention in recent years because it is an important activity for reverse engineering COTS (Commercial Off The Shelf) software. Recent work includes TIE~\cite{tie}, the Hex Rays Decompiler~\cite{ida}, Rewards~\cite{rewards}, and Howard~\cite{Slowinska2011}.  At a high level, the goal of each tool was the same: recover high-level type information from low-level code. However, the scope and fidelity of each tool has varied considerably.
 
 % How previous work does X; setting up for contrasting with next para.
-Figure~\ref{fig:feat} shows an overview of current research and the scope of reconstruction performed. Rewards proposed type propagation from known type sources, such as system and library calls, to type sinks in a dynamic trace, and using this information to type the cells in a memory image. Howard, Hex Rays, and TIE all also do type propagation. Hex Rays and Howard add the ability to infer local variables, which they then label with propagated type information. TIE adds the ability to infer variables not used in a trace, along with a type range. TIE also infers general structural types.  Hex Rays and Rewards do not infer any structures, they simply propagate information from known sources. Howard infers structure fields and arrays accessed during a dynamic trace, but cannot handle recursive definitions such as a linked list~\cite{Slowinska2011}. In practice, however, TIE outputs structure types rarely, and in our experiments, only inferred a single field. There are also systems for type forensics, where the analyst is generally given a set of types and the goal is to match them to compiled code and/or a memory image. We discuss this work in \S~\ref{sec:related}. Static approaches have the benefit of typing all the visible code in the binary, while dynamic approaches have the benefit of knowing true address information as memory accesses occur. Unfortunately, to examine a part of the code with a dynamic approach, the user must first have coverage on that area of the code. When reverse engineering, one often wants to look at an area of code first to decide whether it is worth exploring, rather than needing to find a way to reach that code before considering its nature. This makes the dynamic approach less well suited to the task at hand.
+Figure~\ref{fig:feat} shows an overview of current research and the scope of reconstruction performed. Rewards proposed type propagation from known type sources, such as system and library calls, to type sinks in a dynamic trace, and using this information to type the cells in a memory image. Howard, Hex Rays, and TIE all also do type propagation. Hex Rays and Howard add the ability to infer local variables, which they then label with propagated type information. TIE adds the ability to infer variables not used in a trace, along with a type range. TIE also infers general structural types.  Hex Rays and Rewards do not infer any structures, they simply propagate information from known sources. Howard infers structure fields and arrays accessed during a dynamic trace, but cannot handle recursive definitions such as a linked list~\cite{Slowinska2011}. In practice, however, TIE outputs structure types rarely, and in our experiments, only inferred a single field. There are also systems for type forensics, where the analyst is generally given a set of types and the goal is to match them to compiled code and/or a memory image. We discuss this work in \S~\ref{sec:related}.
+Static approaches have the benefit of typing all the visible code in the binary, while dynamic approaches have the benefit of knowing true address information as memory accesses occur.
+When reverse engineering, one often wants to look at an area of code first to decide whether it is worth exploring, rather than needing to find a way to reach that code before considering its nature. This makes the dynamic approach less well suited to the task at hand.
 
 % Previous work insufficient. 
 Unfortunately, current techniques left large amounts of code untyped. In particular, previous work did not infer polymorphic types. In C, these are often implemented by casting to/from \texttt{void*}. Nor did previous techniques infer recursive types, such as linked lists. Specifically, Hex Rays, Rewards, and Howard did not make type inference a central goal, but instead focused on type propagation. TIE \emph{inferred} types in addition to doing propagation. It did this by first accumulating a set of constraints for typing based on how code used and defined variables. Next, the type constraint solver attempted to unify the constraints into a typing solution. The main limitation of TIE was the constraint solver was not powerful enough to include polymorphic or recursive types, and did a poor job coming up with precise answers for structures. 
@@ -60,7 +62,7 @@ In this chapter we show the following specific results:
 \item We provide a \emph{descriptive} type system with \emph{structure}, \emph {recursive}, and \emph{polymorphic} types (\S~\ref{subsec:typesys}), designed for inferrability, expressiveness, and specificity.
 \item We develop an efficient type inference engine. Our main observation is that early branch pruning greatly speeds up the search of the typing space (\S~\ref{subsec:speed}).
 \item We develop techniques that show variable recovery is not required in order to do type reconstruction, assuming the inference system has sufficient capability to deal with structures (\S~\ref{subsec:regonly}).
-\item We implement our technique and show that we can correctly reverse engineer twise as many types as TIE (\S~\ref{subsec:evalprev}).
+\item We implement our technique and show that we can correctly reverse engineer twice as many types as TIE (\S~\ref{subsec:evalprev}).
 \end{itemize}
 
 % P
