--- a/thesis/alias/background.tex
+++ b/thesis/alias/background.tex
@@ -1,9 +1,8 @@
 \subsection{Alias Analysis}
 An alias analysis endeavors to answer the question ``Do these two pointers point to the same thing?''
 There are two basic varieties: may and must alias.
-Must alias means that two values will definitely point toto the same thing, but the lack of such a relationship means nothing.
+Must alias means that two values will definitely point to the same thing, but the lack of such a relationship means nothing.
 May alias means that two values might point to the same thing, and the lack of such a relationship means they definitely will not.
-In our case, we are interested in may analysis - we want to know if it is possible that the pointer currently being used \emph{aliases} with one which was freed prior.
 
 Additionally, alias analyses have different degrees of sensitivity.
 The sensitivity of an alias analysis refers to what additional parameters are given when asking whether two pointers alias.
@@ -14,7 +13,6 @@ In our case, field sensitivity is made more complex by a lack of type informatio
 
 Analysis which is both context and flow insensitive can generally be done very efficiently, in nearly linear time~\cite{steensgaard-alias}.
 However, their lack of sensitivity makes the drawing of variable boundaries very important and removes all ability to reason about a variable being overwritten as a safety property.
-They are still very useful in compilation, since variables are well defined, and a spurious may-alias relation can only inhibit a potential optimization, but are of limited utility for finding use-after-frees.
 Common examples of this are Steensgaard~\cite{steensgaard-alias} and Andersen's~\cite{andersen-alias}.
 
 Flow-sensitive analyses are still more seldom used due to their longer run times, but modern techniques are beginning to allow them to scale to larger codebases~\cite{sfs}.
@@ -27,7 +25,7 @@ The implementation of a flow sensitive analysis generally follows the pattern of
 
 Context-sensitive analyses are frequently used in analysis of Java and other object oriented programs because it helps to reason about which class of objects may have been passed into a function, and thus which methods may be called.
 The two primary ways to accomplish this are to either take a call-site approach (tracking a stack of return addresses), or an object based approach where method calls are parameterized by which objects they may have occurred on.
-We will focus on the call-site approach here, as we do not have recovered objects.
+We will focus on the call-site approach in this thesis as not all the code under examination is object oriented, and we are not performing object recovery on the code which is.
 
 The call-site approaches are generally distinguished from one another based on what domain is used for the stack tracking.
 With an unbounded stack, it reduces to inlining every function call.
@@ -40,4 +38,4 @@ In this case, a strategy to deal with recursion is not required, but still may b
 One of the most focused on analyses for alias analysis over binaries is VSA~\cite{vsa}.
 VSA integrates the problem of alias and value analysis by doing abstract interpretation over a domain called a strided interval, with dynamic allocations appearing as free variables.
 This formulation has produced useful results in the past, but its relative expense~\cite{angr-sok} has limited its applications, especially with regards to whole program analysis.
-This technique has also been applied to variable recovery~\cite{divine}, however using this for variable selection in our case would result in a cyclic dependency.
+This technique has also been applied to variable recovery~\cite{divine}.
