--- a/thesis/bitr/eval.tex
+++ b/thesis/bitr/eval.tex
@@ -63,12 +63,12 @@ Improvement & 0.78 & 0.93 \\
 \label{bitr:fig:results-tie}
 \end{figure*}
 
-For a more real-world evaluation, we ran our system and TIE~\cite{tie} with our new metric, over \texttt{coreutils}, a collection of common programs installed on nearly every UNIX system. The programs in \texttt{coreutils} represent a variety of different kinds of workloads, and are open source, so we were readily able to build and examine debug symbols for them. We use this data set to answer this and our remaining questions.
+For a more real-world evaluation, we ran our system over \texttt{coreutils}, a collection of common programs installed on nearly every UNIX system. The programs in \texttt{coreutils} represent a variety of different kinds of workloads, and are open source, so we were readily able to build and examine debug symbols for them. We use this data set to answer this and our remaining questions.
 
 In an effort to demonstrate the validity of our new metric and compare ourselves to systems other than TIE (on which we were able to generate our new metric scoring due to TIE access), we also report statistics of conservatism and distance in the same way as previous work~\cite{tie,sw}. Overall, on \texttt{coreutils} we achieve conservatism of 95.95\% and an average distance of only 1.33. If we only examine type variables which had at least one constraint reference them, we see instead an average distance of 0.68, substantially better than previous work.
 
 \subsection{Is \bitr's recovery good on an absolute scale?}
-Unfortunately, we cannot run most of the other systems under this metric, as implementations are not readily available. However, we did get access to an implementation of TIE, so we ran TIE under this new metric in addition to our work. Over all the type information contained in the DWARF information for \texttt{coreutils}, \bitr\ got a 21.01\% recovery rate. TIE, when scored on this metric, achieves a 12.65\% rate.
+Unfortunately, we cannot run most of the other systems under this metric, as implementations are not readily available. However, we did get access to an implementation of TIE~\cite{tie}, so we ran TIE under this new metric in addition to our work. Over all the type information contained in the DWARF information for \texttt{coreutils}, \bitr\ achieved a 21.01\% recovery rate. TIE, when scored on this metric, achieved a 12.65\% rate.
 
 As our new metric has a direct interpretation in terms of its usefulness to the reverse engineer, these values show that \bitr\ is useful for recovering types. Additionally, it highlights the progress made on an absolute scale. However, it also shows how much further the field has to go --- a one in five chance of having the correct type is unlikely to be the best possible solution.
 
@@ -80,7 +80,7 @@ int f(void* x) {
   return (v == 0);
 }
 \end{verbatim}
-we would get code which would be legal if our mystery type were either an \texttt{int} or a pointer of some variety. We can use heuristics when outputting a type for decompilation (for example, preferring the lower bound of a type in order to avoid casting), but since both are legal, and all constraints on \texttt{v} are visible in this snippet, we would never be able to get an exact type.
+we would get code which would be legal if our mystery type (represented by a ?) were either an \texttt{int} or a pointer of some variety. We can use heuristics when outputting a type for decompilation (for example, preferring the lower bound of a type in order to avoid casting), but since both are legal, and all constraints on \texttt{v} are visible in this snippet, we would never be able to get an exact type.
 
 Dealing with these would be a matter of better heuristics, and would have left the realm of program analysis and gone into the realm of programmer analysis. The heuristic of selecting the lower bound is not a good one, as this will reduce your conservativeness, but sometimes this choice may make sense. Developing heuristics to deal with this issue is outside the scope of this work, but presents an interesting challenge discovered in our experiments.
 
@@ -102,7 +102,7 @@ This makes sense as a measurement because it demonstrates the ability of the too
 \noindent {\bf Unconstrained Type Variables.}
 The primary source of error reflected in this difference is data that is never written to or read from. For example, while most \texttt{coreutils} binaries contain a \texttt{close\_stream} function which operates on a stream structure, there is no indication of the inner properties of this structure in the code itself. However, the debug symbols are constructed in the presence of header files that describe the fields of the stream structure. As a result, the score is strongly deflated.
 We can partially mitigate this by using type signatures for library functions, but we did not use signatures for all functions in our experiments, nor would this information always be available.
-While \bitr\ can recover some of these unconstrained variables through appropriate type signing (or analysis of the target shared library), there are also a cases where a structure is present, but in the structure's entire life cycle, one of its fields is never referenced.
+While \bitr\ can recover some of these unconstrained variables through appropriate type signing (or analysis of the target shared library), there are also cases where a structure is present, but in the structure's entire life cycle, one of its fields is never referenced.
 
 \subsection{How does \bitr\ scale?}
 \label{subsec:speed}
